--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,26 +1,43 @@
 
 
-<!-- <div id="demo" class="carousel slide" data-ride="carousel">
+<div id="demo" class="carousel slide" data-ride="carousel">
 
-
+  <!-- Indicators -->
   <ul class="carousel-indicators">
     <li data-target="#demo" data-slide-to="0" class="active"></li>
     <li data-target="#demo" data-slide-to="1"></li>
     <li data-target="#demo" data-slide-to="2"></li>
   </ul>
-
+  
+  <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="assets/d.jpg" alt="Los Angeles" width="1100" height="500">
+      <img src="assets/gst.jpg" alt="Los Angeles" width="1400" height="572">
+      <div class="carousel-caption">
+          <h3>Los Angeles</h3>
+          <p>We had such a great time in LA!</p>
+        </div>
     </div>
     <div class="carousel-item">
-      <img src="assets/a.jpg" alt="Chicago" width="1100" height="500">
+      <img src="assets/it.jpg" alt="Chicago" width="1400" height="572">
+      <div class="carousel-caption">
+          <h3>Income Tax Return</h3>
+          <p>We had such a great time in LA!</p>
+        </div>
     </div>
     <div class="carousel-item">
-      <img src="assets/c.jpg" alt="New York" width="1100" height="500">
+      <img src="assets/bs.jpg" alt="Balance Sheet" width="1400" height="572">
+      <div class="carousel-caption">
+          <h3>Income Tax Return</h3>
+          <p>We had such a great time in LA!</p>
+        </div>
+    </div>
+    <div class="carousel-item">
+      <img src="assets/c.jpg" alt="New York" width="1400" height="572">
     </div>
   </div>
   
+  <!-- Left and right controls -->
   <a class="carousel-control-prev" href="#demo" data-slide="prev">
     <span class="carousel-control-prev-icon"></span>
   </a>
@@ -28,12 +45,6 @@
     <span class="carousel-control-next-icon"></span>
   </a>
 </div>
- -->
 
 
-<!--Start of Tawk.to Script-->
 
-
-Hello, hi
-<br>
-  <!--End of Tawk.to Script-->
