--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -12,28 +12,67 @@
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="assets/gst.jpg" alt="Los Angeles" width="1400" height="572">
+      <img src="assets/gst.png" alt="Los Angeles" width="1400" height="572">
       <div class="carousel-caption">
-          <h3>Los Angeles</h3>
-          <p>We had such a great time in LA!</p>
+          <h3>GST Registration</h3>
+          <h3>GST Return</h3>
+          <h3>GST Audit</h3 >
+          
+          
         </div>
     </div>
     <div class="carousel-item">
       <img src="assets/it.jpg" alt="Chicago" width="1400" height="572">
       <div class="carousel-caption">
-          <h3>Income Tax Return</h3>
-          <p>We had such a great time in LA!</p>
+          <h3 style="color: black;" >Income Tax Return</h3>
         </div>
     </div>
     <div class="carousel-item">
-      <img src="assets/bs.jpg" alt="Balance Sheet" width="1400" height="572">
+      <img src="assets/tr.webp" alt="Balance Sheet" width="1400" height="572">
       <div class="carousel-caption">
-          <h3>Income Tax Return</h3>
+        
+        </div>
+    </div>
+   
+    <div class="carousel-item">
+      <img src="assets/tdss.jpg" alt="Balance Sheet" width="1400" height="572">
+      <div class="carousel-caption">
+          <h3>TDS Return</h3>
           <p>We had such a great time in LA!</p>
         </div>
     </div>
+  
     <div class="carousel-item">
-      <img src="assets/c.jpg" alt="New York" width="1400" height="572">
+      <img src="assets/cf.jpg" alt="Balance Sheet" width="1400" height="572">
+      <div class="carousel-caption">
+          <h2 style="color: rgb(83, 8, 8)">Company Formation</h2>
+          <h2 style="color: rgb(83, 8, 8)">Company Annual Return</h2>
+      
+        </div>
+    </div>
+  
+    <div class="carousel-item">
+      <img src="assets/t.png" alt="Balance Sheet" width="1400" height="572">
+      <div class="carousel-caption">
+          <h3 style="color: black">Tender Filing</h3>
+          <h3 style="color: black">Tender Documents</h3>
+      
+        </div>
+    </div>
+
+    <div class="carousel-item">
+      <img src="assets/fssai.png" alt="FSSAI" width="1400" height="572">
+      <div class="carousel-caption">
+          <h3 style="color: black">FSSAI Registration</h3>
+         
+        </div>
+    </div>
+
+
+    <div class="carousel-item">
+      <img src="assets/dsc.jpg" alt="New York" width="1400" height="572">
+      <div class="carousel-caption">
+      <h3 style="color: red">Digital Signature</h3>
     </div>
   </div>
   
